- ib: fix minor protocol problems
- ib: cleanup build
- better pvfs2-client and pvfs2-client-core logging
- --enable-fast was broken
- fix compile error on FC3 and RHEL 2.6.9 kernels
- async i/o support (but needs libaio and libaio-devel at this time)
- "trusted ports"
- --enable-strict now compiles w/ a lot fewer warnings
- fixed timestamp problems for pvfs2 files
- fixed bugs in zero-fill handling
- no longer ship generated .c files from .sm. instead, ship the sm parser
  (allows for easier release patching)
- Phil Carns: server checks fs id on startup
- Phil Carns: --num-dfiles option to pvfs2-genconfig
- Phil Carns: fix setgid suport
- Phil Carns: proper symlink support (created as 777, no way to change them)
- Lots of portability fixes.  PVFS2 now builds on Darwin (userspace, no
  kernel)


pvfs2-1.3.0
===============
- Murali Vilayannur contributed extened attribute support to the VFS interface
- Murali and Dean Hildebrand also worked on implementing readv and writev in
  the VFS interface
- Phil Carns contributed logging improvements to pvfs2-client and pvfs2-server
- Phil also contributed improvements to the request processor which should
  help speed up some concurrent workloads.
- Phil further contributed protocol versioning to PVFS2.  Major version
  changes are incompatible up or down.  New clients can't talk to old servers,
  but new servers can talk to old clients. 
- clean up some warnings on 64 bit platforms
- Phil contributed a pvfs2-set-sync tool 
- lots of configure tests for various kernel versions
- rework acache
- memory leak in flow descriptors
- bugfixes for noncontig requests
- improvements to the req scheduler: more operations can occur concurently now
- improved handling of "zero-fill" case: sparse files now treated correctly
- further improvements to nightly testsuite


pvfs2-1.2.0
===============
- make server better able to handle bogus file names (David Metheny)
- better casts for ppc64